[package]
name = "clht-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
parking_lot = "0.10.0"
ahash = "0.3.3"

[dev-dependencies]
rand = "0.7"
rayon = "1.3"
criterion = "0.3"
num_cpus = "1.12.0"
mimalloc = { version = "0.1", default-features = false }
jemallocator  = "0.3"

[[bench]]
name = "clht"
harness = false

[profile.release]
debug = true
panic = "abort"
